- Added a new directory, tests/scripts, with several shell scripts that perform
  simple checks on the code including: code styling, documentation formatting,
  proper use of .gitignore, and preventing the accidental commit of large files.

- It is recommended that developers run the above tests scripts (via the runtest
  script) before pushing to GitHub. See the README file in tests/scripts.

- The Travis CI settings have been updated to include a new Checks stage which
  runs the code-style, git-history, documentation and gitignore test scripts.

Miscellaneous
-------------
- Upgraded the SUNDIALS interface to utilize version 5.0. This necessitated a
  complete rework of the interface and requires changes at the application
  level. Example usage of the new interface can be found in examples/sundials.

- Added support for output in the ParaView XML format. See Examples 5/5p, 9/9p
  and the new ParaViewDataCollection class.

- Collected object files from the miniapps/common directory into a new library,
  libmfem-common for the convenience of application developers. The new library
  is now used in several miniapps in the electromagnetic and tools directories.


Version 4.0, released on May 24, 2019
=====================================

Unlike previous MFEM releases, this version requires a C++11 compiler.

GPU support
-----------
- Added initial support for hardware devices, such as GPUs, and programming
  models, such as CUDA, OCCA, RAJA and OpenMP.

- The GPU/device support is based on MFEM's new backends and kernels working
  seamlessly with a new lightweight device/host memory manager. The kernels can
  be implemented either in OCCA, or as a simple wrapper around for-loops, which
  can then be dispatched to RAJA and native backends. See the files forall.hpp
  and mem_manager.hpp in the general/ directory for more details.

- Several of the MFEM example codes (ex1, ex1p, ex6, and ex6p) can now take