@@ -1,4 +1,0 @@
-CHANGELOG
-miniapps/electromagnetics/cylinder-tet-p2.gen
-miniapps/electromagnetics/cylinder-hex-q2.gen
-doc/web/favicon.ico
